security/network-policies/pod-httpd.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    version: httpd
  name: httpd
spec:
  containers:
  - image: httpd:latest
    name: httpd
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
