security/network-policies/pod-workspace.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    version: workspace
  name: workspace
spec:
  containers:
  - command:
    - sleep
    - "3600"
    image: ubuntu:latest
    name: workspace
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
