security/network-policies/network-policy-httpd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpd-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      version: workspace
  policyTypes:
    - Ingress
  ingress:
  - from: 
    - podSelector:
        matchLabels:
          name: nginx
    ports:
    - protocol: TCP
      port: 80
